2001-11-10  Andrew Cagney  <ac131313@redhat.com>

	* m88k-tdep.c (m88k_register_type): New function.
	* config/m88k/tm-m88k.h (REGISTER_CONVERTIBLE): Delete.
	(REGISTER_CONVERT_TO_VIRTUAL): Delete.
	(REGISTER_CONVERT_TO_RAW): Delete.
	(m88k_register_type): Declare.
	(REGISTER_VIRTUAL_TYPE): Update.  Call m88k_register_type.

2001-11-11  Mark Kettenis  <kettenis@elgar.my.domain>

	* i386-tdep.h (FPU_REG_RAW_SIZE): Define unconditionally.
	* i387-nat.c, i387-tdep.c: Unconditionally include "i386-tdep.h".
	* config/i386/tm-i386.h (FPU_REG_RAW_SIZE): Removed.
	(SIZEOF_FPU_REGS): Don't use FPU_REG_RAW_SIZE here.

2001-11-12  Jim Blandy  <jimb@redhat.com>

	Patch from Andreas Schwab <schwab@suse.de>:
	* eval.c (evaluate_subexp_standard): Fix memory leak: use alloca
	instead of xmalloc.

2001-11-12  Jim Blandy  <jimb@redhat.com>

	* corefile.c (write_memory_unsigned_integer,
	write_memory_signed_integer): New functions.
        (write_memory): Move to be with other write_memory_* functions.
	* gdbcore.h (write_memory_unsigned_integer,
	write_memory_signed_integer): New declarations.

2001-11-11  Geoffrey Keating  <geoffk@redhat.com>

	* dwarf2read.c (dwarf_decode_lines): Properly deal with
	unknown standard opcodes.

2001-11-11  Andrew Cagney  <ac131313@redhat.com>

	* README (alpha-dec-osf5.1): Mention -DUSE_LDR_ROUTINES.
	(sparcv9-sun-solars2.8): Mention problem with 64 bit GCC 3.0.x.
	(i586-sco-sysv5uw7.1.1): Mention problem with threads.

2001-11-11  Andrew Cagney  <ac131313@redhat.com>

	From Mark Kettenis  <kettenis@gnu.org>:
	* breakpoint.c (breakpoint_re_set_one): Don't discard SHLIB
	breakpoints when they fail.

2001-11-10  Andrew Cagney  <ac131313@redhat.com>

	* printcmd.c, valprint.c, language.c, linespec.c, infcmd.c,
	gnu-nat.c, findvar.c, expprint.c, typeprint.c, stack.c, top.c:
	Replace value_ptr with struct value.

2001-11-10  Andrew Cagney  <ac131313@redhat.com>

	* c-valprint.c, ch-lang.c, ch-valprint.c, cp-valprint.c,