@@ -1,5 +1,16 @@
 2001-11-10  Andrew Cagney  <ac131313@redhat.com>
 
+	* config/i960/tm-nindy960.h (REGISTER_CONVERTIBLE)
+	(REGISTER_CONVERT_TO_RAW, REGISTER_CONVERT_TO_VIRTUAL): Delete
+	undef.
+	* i960-tdep.c (i960_register_type): New function.
+	* config/i960/tm-i960.h (REGISTER_CONVERTIBLE): Delete.
+	(REGISTER_CONVERT_TO_VIRTUAL): Delete.
+	(REGISTER_CONVERT_TO_RAW): Delete.
+	(REGISTER_VIRTUAL_TYPE): Update.  Call i960_register_type.
+
+2001-11-10  Andrew Cagney  <ac131313@redhat.com>
+
 	* m88k-tdep.c (m88k_register_type): New function.
 	* config/m88k/tm-m88k.h (REGISTER_CONVERTIBLE): Delete.
 	(REGISTER_CONVERT_TO_VIRTUAL): Delete.
